--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,114 @@
+@import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
+:root {
+    font-family: 'DotGothic16', sans-serif;
+    --main-color: #e98787;
+    --accent-color:#A9A9A9;
+    --backgroung-color: #2b77c4;
+}
+* {
+    box-sizing: border-box;
+}
+body {
+    background-color: var(--background-color);
+    padding: 0;
+    margin: auto;
+    font-size: 20px;
+    color: var(--main-color);
+}
 header {
     position: fixed;
-    top: 0;
-    right: 0;
+    top: 1px;
     left: 0;
-    padding-top: 40px;
+    right: 0;
+    z-index: 2;
+    height: 10vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2vh;
+    border-bottom: 1px solid var(--main-color);
+    background-color: var(--background-color);
 }
 #header-img {
-    height: 100px;
-    margin-top: 20px;
+    width: 14vw;
 }
-.video {
-    padding-top: 200px ;
-}
-#nav-bar {
+ul {
+    list-style: none;
     display: flex;
+    flex-direction: row;
+    justify-content: left;
 }
-@media (max-width: 600px) {
+a {
+    text-decoration: none;
+    padding: 10px 10px 10px 10px;
+    color: var(--main-color);
 }
-max-width: 15px;
+a:hover {
+    background-color: var(--accent-color);
+}
+
+.banner {
+    position: absolute;
+    z-index: 1;
+    top: 10vh;
+    left: 0;
+    right: 0;
+    background: #C0C0C0;
+    min-height: 90vh;
+    background-size: cover;
+    background-position: center center;
+}
+
+h1 {
+    font-size: 70px;
+    padding: 20vh 5vw 1vh;
+    font-weight: 700;
+    font-style: italic;
+}
+
+p {
+    padding-left: 5vw;
+}
+
+.video {
+    position: absolute;
+    z-index: 1;
+    top: 100vh;
+    left: 20vw;
+}
+
+#video {
+    width: 60vw;
+    height: 60vh;
+    border: 0;
+}
+
+h2 {
+    color: var(--accent-color);
+    font-size: 42px;
+}
+
+form {
+    position: absolute;
+    top: 190vh;
+    left: 35vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 30vw;
+    padding: 20px;
+    border: 2px solid var(--accent-color);
+    border-radius: 3%;
+}
+
+input {
+    margin: 20px;
+    padding: 10px;
+}
+
+#submit {
+    background-color: var(--accent-color);
+    cursor: pointer;
+}
